# xds

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  go.sh  io_bench.py  knowledge  p2p_dev.c  p2p_dev_uapi.h  p2p_mem_query.h  stub.c  xds基本评估.md
docs/: COMMIT_GUIDE.md  FIEMAP_OFFSET_FIX.md  MODIFICATION.md  PCIE_P2P_REPORT.md  TEST_GUIDE.md  XDS_BENCHMARK_DATA_REPORT.html  XDS_TECHNICAL_EVALUATION_REPORT.html
file_p2p/: file_p2p_api.c  file_p2p_api.h  mock_file_p2p.py  p2p_dev_uapi.h  py_file_p2p_api.c  setup.py  test.mk  test.py
tests/: test_pcie_p2p_report.py  test_single_npu_stream_bench.py  test_stream_report.py
tests/mock/: test_file_p2p.py
tests/real/: test_import.py
tools/: dual_npu_dual_nvme_bench.py  dual_npu_dual_nvme_thread_bench.py  pcie_p2p_report.py  plot_single_npu_stream_bench.py  repro_ipc_import_pa.cpp  repro_ipc_import_pa.sh  single_npu_stream_bench.cpp  single_npu_stream_bench.py  verify_shared_hbm_owner.cpp  verify_shared_hbm_owner.sh  xds.sh  xds_test.py
